--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -1,6 +1,6 @@
 @import "normalize.css";
 @import "dashboard.scss";
-@import "external.scss";
+@import "/external/all.scss";
 
 .app {
   background-color: #282c34;
