--- a/src/styles/_dashboard.scss
+++ b/src/styles/_dashboard.scss
@@ -30,7 +30,7 @@
   flex: 1;
   margin: 1rem;
   border-radius: 10px;
-  height: 150px;
+  height: 5em;
   background: rgba(255, 255, 255, 0.075);
 
   &__content {
@@ -41,6 +41,7 @@
     &--vs {
       display: block;
       font-size: 0.7em;
+      margin-top: 1px;
     }
   }
 }
